<resources>
    <string name="app_name">Barter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="fill_up_the_form_below">fill-up the form below</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="address">Address</string>
    <string name="middlename">Middlename</string>
    <string name="next">Next</string>
</resources>