<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <TextView
        android:id="@+id/tv_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="176dp"
        android:text="@string/sign_up"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fillupforms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="177dp"
        android:text="@string/fill_up_the_form_below"
        android:textColor="#424242"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_firstname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="105dp"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/edt_middleName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fillupforms">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_lastname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="106dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_dob"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_middleName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/edt_dob"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/date_of_birth"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/edt_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_lastname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_phoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_dob">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_middleName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_lastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/middlename"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bttn_signup_next"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="125dp"
        android:background="@drawable/bttn_custom_ripple_signin"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_phoneNumber" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_phoneNumber"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/bttn_signup_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_address">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone number" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>